# Audio-Equalizer

./: README.md
Audio_Equalizer/: CMakeLists.txt  main.cpp
Audio_Equalizer/Include/: Audio_eq.cpp  Audio_eq.h  Signals.cpp  Signals.h  wav_handler.cpp  wav_handler.h
